--- a/app.json
+++ b/app.json
@@ -1,24 +1,16 @@
 {
-      "name": "Shinobu Robot",
+      "name": "Mizuhara",
       "description": "A Powerful  Telegram group management bot.",
       "keywords": [
          "telegram",
          "advance",
          "group",
          "manager",
-         "Akeno"
+         "mizuhara"
       ],
     
    "logo":    "https://telegra.ph/file/142d426465e1fd431aa17.jpg",  
-   "repository": "https://github.com/AnimeKaizoku/SaitamaRobot",
-   "addons": [
-          {
-         "options": {
-            "version": "12"
-         },
-         "plan": "heroku-postgresql"
-      }
-   ],
+   "repository": "https://github.com/itspro-dev/mizuharanew",
    "env": {
       "TOKEN": {
          "description": "Your bot token. Get one from @BotFather duh",
@@ -45,7 +37,6 @@
          "required": true,
          "value": "1606221784"
      },
-
       "REDIS_URL": {
          "description": "Get REDIS_URL from  https://app.redislabs.com, used for run your bot modules.",
          "required": true,
@@ -63,12 +54,10 @@
          "description": "username of your bot with the @",
          "value": ""
       },
-
       "BOT_ID": {
          "description": "to get your bot_id using other bot or userbot",
          "value": ""
       },
-
       "OWNER_USERNAME": {
          "description": "Your username without the @",
          "value": "The_Ghost_Hunter"
@@ -77,6 +66,11 @@
          "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to masha support than consider you made an enemy.",
          "required": true,
          "value": "AkenoProBotSupport"
+      },
+      "DATABASE_URL": {
+         "description": "Add your Database URL",
+         "required": true,
+         "value": ""
       },
       "MONGO_DB_URI": {
          "description": "Required for database connections.",
@@ -94,12 +88,12 @@
      "EVENT_LOGS": {
          "description": "Event logs channel to note down important bot level events, recommend to make this public. ex: '-123456'",
          "required": true,
-         "value": "@Akeno_Global_Logs"
+         "value": "-1234567890"
       },
       "JOIN_LOGGER": {
          "description": "A channel where bot will print who added it to what group, useful during debugging or spam handling.",
          "required": true,
-         "value": "@Akeno_Global_Logs"
+         "value": "-1234567890"
       },      
       "CASH_API_KEY": {
          "description": "Required for currency converter. Get yours from https://www.alphavantage.co/support/#api-key",
@@ -111,23 +105,20 @@
          "required": true,
          "value": "-xyz"
      }, 
-
       "API_OPENWEATHER": {
         "description": "Get your own APPID from https://api.openweathermap.org/data/2.5/weather",
         "value": "",
         "required": false
       },
-
       "DEV_USERS": {
          "description": "ID of users who are Devs of your bot (can use /py etc.). If you are a noob and would come and bother Masha support then keep the current ID's here at they are and add yours.",
          "required": false,
          "value": ""
-     },
-        "ARQ_API": {
-            "description": "Get this from @ARQRobot.",
-            "required": true
-        },
-
+      },
+      "ARQ_API": {
+         "description": "Get this from @ARQRobot.",
+         "required": true
+      },
       "sw_api": {
          "description": "Spamwatch API Token, Get one from @SpamWatchBot.",
          "required": false,
@@ -199,10 +190,10 @@
          "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
          "value": "True"
       },
-        "ARQ_API": {
-            "description": "Get this from @ARQRobot.",
-            "required": true
-        },
+      "ARQ_API": {
+         "description": "Get this from @ARQRobot.",
+         "required": true
+      },
       "BAN_STICKER": {
          "description": "ID of the sticker you want to use when banning people.",
          "required": false,
